--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,10 +31,23 @@
         android:text="Check Internet"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/white"/>
 
-        />
+         <RelativeLayout
+        android:id="@+id/progressLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+
+                      <ProgressBar
+                  android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
 
 
 
-</RelativeLayout>
+
+    </RelativeLayout>
