--- a/app/src/main/res/layout/recycler_dashboard_single_row.xml
+++ b/app/src/main/res/layout/recycler_dashboard_single_row.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/llContent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="140dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ffffff"
+    android:layout_margin="6dp"
+    app:cardCornerRadius="4dp">
+
+<LinearLayout
+    android:id="@+id/llContent"
+    android:layout_width="match_parent"
+    android:layout_height="140dp"
+
     android:background="#ffffff"
     android:weightSum="6">
 <!--    android:orientation="horizontal"-->
@@ -81,3 +89,4 @@
     </TextView>
 
 </LinearLayout>
+</androidx.cardview.widget.CardView>
